--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Приветсвуем</title>
         <meta charset="UTF-8">
-    <link href="./css/style.css" rel="stylesheet"></head>
+    </head>
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="js/bundle.js"></script></body>
+    </body>
 </html>
