--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
-        <title>Приветсвуем</title>
+        <title>Монте Карло</title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <div id="root"></div>
-        <p>Проверка</p>
+        <div id="root">Загрузка...</div>
     </body>
 </html>
