--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,10 +1,8 @@
 <html>
-
 <head>
-    <title>react-webpack-app</title>
+    <title>onetwotrip</title>
     <meta charset="UTF-8">
 </head>
-
 <body>
     <div id="root">
         <div>
